--- a/assets/style.css
+++ b/assets/style.css
@@ -13,21 +13,22 @@
     height: 75px;
     width: 75px;
     border: 1px red dashed;
-    animation: stepone 5s linear forwards, steptwo 5s 2s linear forwards, stepthree 0.5s 7s linear forwards, stepfour 2s 7.5s linear forwards, stepfive 2.5s 9.5s linear forwards, stepsix 5s 13.5s linear forwards;
+    animation: stepone 5s linear forwards, steptwo 2s 5s linear forwards, stepthree 0.5s 7s linear forwards, stepfour 2s 7.5s linear forwards, stepfive 10s 9.5s linear forwards;
   }
  
   @keyframes stepone {
       from {
-          margin-left:10px
+          margin-left:10px;
+          border: 1px red dashed;
+          margin-top: 15px;
       }
        
       to {
-        margin-left:505px
+        margin-left:505px;
+        margin-top: 15px;
     }
     
-
-  }
-  
+}
   @keyframes steptwo {
     from {
         margin-top:10px
@@ -42,15 +43,16 @@
 
 @keyframes stepthree {
     from {
-    margin-right:10px;
+    margin-top: 195px;
+    margin-right: 10px;
     }
      
     to {
-      margin-right:160px;
-      rotate: 45%;
+    margin-top: 195px;
+    margin-left: 250px;
+    transform: rotate(45deg);
   }
   
-
 }
 
 @keyframes stepfour {
@@ -61,32 +63,19 @@
     to {
       margin-left:10px;
       border-color: #0900BD;
-  }
-  
-
+      transform: rotate(90deg);
+    }
 }
 
 @keyframes stepfive {
     from {
-        margin-left:10px;
+        margin-bottom: 50px;
+        margin-right: 50px;
     }
-     
     to {
-      margin-left:505px;
-  }
-  
-
-}
-
-@keyframes stepsix {
-    from {
-        margin-bottom:317px;
-    }
-     
-    to {
-        margin-bottom:3px;
-        background-color: radial-gradient(#F76B1C, #FBDA61);
-        size: 150px;
+        margin-bottom:2px;
+        margin-right:2px;
+        background-color: linear-gradient(#F76B1C, #FBDA61);
   }
   
 
